--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "c8 mocha",
-    "clean": "rm -fr ./js/dist",
+    "clean": "rimraf ./js/dist/* --glob",
     "build:prod": "npm run clean && npm i && webpack --config webpack.prod.cjs",
     "build:dev": "npm run clean && npm i && webpack --config webpack.dev.cjs",
     "build": "npm run build:prod",
@@ -48,6 +48,7 @@
     "mini-css-extract-plugin": "2.9.0",
     "mocha": "10.4.0",
     "node-polyfill-webpack-plugin": "3.0.0",
+    "rimraf": "^5.0.7",
     "semantic-release": "23.1.1",
     "semantic-release-discord-bot": "^1.1.0",
     "stylelint": "16.5.0",
