--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adobe/remark-gridtables": "3.0.6",
     "@spectrum-web-components/bundle": "0.47.2",
     "@spectrum-web-components/icons-workflow": "0.47.2",
+    "aem-import-builder": "^0.0.1",
     "hast-util-raw": "9.0.4",
     "hast-util-to-html": "9.0.2",
     "mdast-util-to-hast": "13.2.0",
@@ -52,6 +53,7 @@
     "semantic-release-discord-bot": "^1.1.0",
     "stylelint": "16.9.0",
     "stylelint-config-standard": "36.0.1",
+    "url": "^0.11.4",
     "webpack": "5.94.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.1.0",
