feat: Import Assistant
- fix AEM branding
- added concept of a shell and runtime for cross iframe communication
- added IMS login

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "c8 mocha",
     "clean": "rm -fr ./js/dist",
-    "build:prod": "npm run clean && npm i && webpack --config webpack.prod.cjs",
-    "build:dev": "npm run clean && npm i && webpack --config webpack.dev.cjs",
+    "build:prod": "npm run clean && webpack --config webpack.prod.cjs",
+    "build:dev": "npm run clean && webpack --config webpack.dev.cjs",
     "build": "npm run build:prod",
     "lint:js": "eslint .",
     "lint:css": "stylelint './css/**/*.css'",
@@ -20,7 +20,7 @@
     "@adobe/remark-gridtables": "3.0.6",
     "@spectrum-web-components/bundle": "0.47.2",
     "@spectrum-web-components/icons-workflow": "0.47.2",
-    "aem-import-builder": "^0.0.1",
+    "events": "^3.3.0",
     "hast-util-raw": "9.0.4",
     "hast-util-to-html": "9.0.2",
     "mdast-util-to-hast": "13.2.0",
