--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adobe/remark-gridtables": "3.0.6",
     "@spectrum-web-components/bundle": "0.47.2",
     "@spectrum-web-components/icons-workflow": "0.47.2",
+    "aem-import-builder": "^0.1.0",
     "events": "^3.3.0",
     "hast-util-raw": "9.0.4",
     "hast-util-to-html": "9.0.2",
